Add test-direct CLI command and remove test-mcp-directly script
- Add test-direct command to CLI that tests MCPs directly without Wrangler/Worker isolation
- Uses saved configs from IDE config file (works with any MCP)
- Replaces test-mcp-directly.ts script functionality
- Remove test-mcp-directly.ts script and examples/github-mcp/config.json
- Update package.json to remove test:mcp script
- Clean up logger.ts to remove test-mcp-directly reference

--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
     "check": "biome check src",
     "check:fix": "biome check --write src",
     "worker:dev": "npx wrangler dev",
-    "benchmark": "tsx benchmarks/github-comparison.ts",
-    "test:mcp": "tsx scripts/test-mcp-directly.ts"
+    "benchmark": "tsx benchmarks/github-comparison.ts"
   },
   "keywords": [
     "mcp",
