env and readme updates

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-# MCP Isolate Runner Configuration
+# MCP Guard Configuration
 
 # Server Configuration
 NODE_ENV=development
@@ -19,5 +19,3 @@ METRICS_INTERVAL_MS=60000
 # Get your token from: https://github.com/settings/tokens
 # Required scopes: repo
 GITHUB_PERSONAL_ACCESS_TOKEN=your_github_token_here
-GITHUB_MCP_COMMAND=npx
-GITHUB_MCP_ARGS=-y @modelcontextprotocol/server-github
