--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "check:fix": "biome check --write src",
     "worker:dev": "npx wrangler dev",
     "benchmark": "tsx benchmarks/github-comparison.ts",
-    "release": "release-it"
+    "release": "release-it",
+    "publish": "npm publish --provenance --access public"
   },
   "keywords": [
     "mcp",
