--- a/.release-it.json
+++ b/.release-it.json
@@ -12,11 +12,10 @@
   },
   "npm": {
     "publish": true,
-    "publishArgs": ["--provenance", "--access", "public"]
+    "publishArgs": ["--provenance", "--access", "public"],
+    "skipChecks": true
   },
-  "hooks": {
-    "before:init": ["npm run lint", "npm run test", "npm run build"]
-  },
+  "hooks": {},
   "plugins": {
     "@release-it/conventional-changelog": {
       "preset": {
