fix: skip pre-push hook in CI release workflow

--- a/.release-it.json
+++ b/.release-it.json
@@ -5,6 +5,7 @@
     "tag": true,
     "tagName": "v${version}",
     "push": true,
+    "pushArgs": ["--no-verify"],
     "requireCleanWorkingDir": false,
     "requireUpstream": false
   },
