--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,47 +1,34 @@
-name: Release
+name: Publish
 
 on:
-  workflow_dispatch:
-    inputs:
-      release-type:
-        description: "Release type"
-        required: true
-        type: choice
-        options:
-          - patch
-          - minor
-          - major
-        default: "patch"
+  push:
+    tags:
+      - 'v*'
 
 permissions:
   contents: write
   id-token: write
 
 jobs:
-  release:
-    name: Release
+  publish:
+    name: Publish to npm
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: "20.x"
-          registry-url: "https://registry.npmjs.org"
-          cache: "npm"
-          # Uses OIDC for trusted publishing (no token needed)
+          node-version: '20.x'
+          registry-url: 'https://registry.npmjs.org'
+          cache: 'npm'
 
       - name: Install dependencies
         run: npm ci
 
       # OIDC requires npm v11.5.1 or later
-      # Node.js v20 comes with npm v10.8, so we need to update it
       - name: Upgrade npm
         run: npm install -g npm@latest
 
@@ -49,98 +36,14 @@ jobs:
         run: npm run build
 
       - name: Run tests
-        run: npm run test
-
-      - name: Configure Git
-        run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "github-actions[bot]@users.noreply.github.com"
-
-      - name: Check version sync
-        run: |
-          CURRENT_NPM_VERSION=$(npm view mcpflare version 2>/dev/null || echo "0.0.0")
-          CURRENT_PKG_VERSION=$(node -p "require('./package.json').version")
-          echo "Current npm version: $CURRENT_NPM_VERSION"
-          echo "Current package.json version: $CURRENT_PKG_VERSION"
-          if [ "$CURRENT_NPM_VERSION" != "0.0.0" ]; then
-            # Compare versions using node (simple numeric comparison for major.minor.patch)
-            VERSION_COMPARE=$(node -e "
-              const npm = '$CURRENT_NPM_VERSION'.split('.').map(Number);
-              const pkg = '$CURRENT_PKG_VERSION'.split('.').map(Number);
-              for (let i = 0; i < 3; i++) {
-                if (npm[i] > pkg[i]) { process.exit(1); }
-                if (npm[i] < pkg[i]) { process.exit(0); }
-              }
-              process.exit(0);
-            ")
-            if [ $? -ne 0 ]; then
-              echo "::error::Version mismatch: npm has $CURRENT_NPM_VERSION (higher) but package.json has $CURRENT_PKG_VERSION"
-              echo "release-it will bump the version, but ensure package.json is at least at $CURRENT_NPM_VERSION first."
-              echo "If $CURRENT_NPM_VERSION was published manually, update package.json to match."
-              exit 1
-            fi
-          fi
-
-      - name: Release (git only - no npm publish)
-        run: npx release-it ${{ github.event.inputs.release-type }} --ci
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          # npm publish is disabled in release-it config - we do it manually after git verification
-
-      - name: Verify git operations succeeded
-        run: |
-          echo "Verifying git commit, tag, and push succeeded..."
-          # Fetch latest changes to see the commit release-it made
-          git fetch origin
-          # Get the updated version
-          UPDATED_VERSION=$(node -p "require('./package.json').version")
-          VSCODE_VERSION=$(node -p "require('./vscode-extension/package.json').version")
-          echo "Updated package.json version: $UPDATED_VERSION"
-          echo "VSCode extension version: $VSCODE_VERSION"
-          
-          # Verify versions are in sync
-          if [ "$UPDATED_VERSION" != "$VSCODE_VERSION" ]; then
-            echo "::error::Version mismatch after release: Main ($UPDATED_VERSION) != VSCode extension ($VSCODE_VERSION)"
-            exit 1
-          fi
-          
-          # CRITICAL: Verify commit exists locally
-          if ! git log --oneline -1 | grep -q "chore: release v$UPDATED_VERSION"; then
-            echo "::error::Release commit not found locally: chore: release v$UPDATED_VERSION"
-            echo "Git operations failed - aborting npm publish"
-            exit 1
-          fi
-          echo "✅ Release commit found locally: chore: release v$UPDATED_VERSION"
-          
-          # CRITICAL: Verify tag exists locally
-          if ! git tag -l | grep -q "^v$UPDATED_VERSION$"; then
-            echo "::error::Release tag not found locally: v$UPDATED_VERSION"
-            echo "Git operations failed - aborting npm publish"
-            exit 1
-          fi
-          echo "✅ Release tag found locally: v$UPDATED_VERSION"
-          
-          # CRITICAL: Verify tag exists on remote (proves push succeeded)
-          if ! git ls-remote --tags origin | grep -q "refs/tags/v$UPDATED_VERSION$"; then
-            echo "::error::Release tag not found on remote: v$UPDATED_VERSION"
-            echo "Git push failed - aborting npm publish"
-            exit 1
-          fi
-          echo "✅ Release tag found on remote: v$UPDATED_VERSION"
-          
-          # Verify CHANGELOG.md was updated
-          if grep -q "^## \[$UPDATED_VERSION\]" CHANGELOG.md; then
-            echo "✅ CHANGELOG.md updated with version $UPDATED_VERSION"
-          else
-            echo "⚠️  Warning: CHANGELOG.md may not have been updated for version $UPDATED_VERSION"
-          fi
-          
-          echo ""
-          echo "✅ All git operations verified - version $UPDATED_VERSION is in the repository"
+        run: npm test
 
       - name: Publish to npm
         run: npm publish --provenance --access public
         env:
           NPM_CONFIG_PROVENANCE: true
-          # OIDC authentication is handled automatically by setup-node
-        # Only runs if git verification step succeeded
+
+      - name: Create GitHub Release
+        uses: softprops/action-gh-release@v2
+        with:
+          generate_release_notes: true
