--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "check": "biome check src",
     "check:fix": "biome check --write src",
     "worker:dev": "npx wrangler dev",
-    "release": "release-it",
+    "postversion": "node scripts/sync-vscode-extension-version.js && git add vscode-extension/package.json && git commit --amend --no-edit",
     "prepare": "husky"
   },
   "keywords": [
@@ -57,11 +57,9 @@
   },
   "devDependencies": {
     "@biomejs/biome": "^2.3.5",
-    "@release-it/conventional-changelog": "^10.0.4",
     "@types/node": "^20.10.0",
     "@vitest/coverage-v8": "^2.1.9",
     "husky": "^9.1.7",
-    "release-it": "^19.2.3",
     "tsx": "^4.7.0",
     "typescript": "^5.3.3",
     "vitest": "^2.1.9"
